@@ -103,6 +103,8 @@ Release 0.20.2 - Unreleased
     HADOOP-6596. Failing tests prevent the rest of test targets from
     execution. (cos)
 
+    HADOOP-6524. Contrib tests are failing Clover'ed build. (cos)
+
 Release 0.20.1 - 2009-09-01
 
   INCOMPATIBLE CHANGES
